Fix visible scrollbar

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  min-height: 94vh;
   font-family: var(--font);
   background: radial-gradient(
     ellipse at bottom,
